# code-samples

airflow-etl/src/: amazon_products_etl.py
django-backend/: pyproject.toml
django-backend/articles/: admin.py  models.py  serializers.py  views.py
django-backend/articles/migrations/: 0001_initial.py  0002_initial.py  0003_alter_article_slug.py
django-backend/comments/: admin.py  models.py  serializers.py  views.py
django-backend/comments/migrations/: 0001_initial.py  0002_initial.py  0003_alter_comment_parent_comment.py
django-backend/django_backend/: permissions.py  settings.py  urls.py
django-backend/users/: admin.py  serializers.py  views.py
django-backend/users/migrations/: 0001_initial.py
next-typescript-app/: .env  .prettierrc.yml  README.md  package.json
next-typescript-app/src/app/: globals.css  layout.tsx  page.tsx
next-typescript-app/src/app/customers/: page.tsx
next-typescript-app/src/app/fare-calculator/: page.tsx
next-typescript-app/src/app/fare-caps/: page.tsx
next-typescript-app/src/app/fares/: page.tsx
next-typescript-app/src/app/peak-hours/: page.tsx
next-typescript-app/src/app/trips/: page.tsx
next-typescript-app/src/components/: customer-picker.tsx  date-picker.tsx
next-typescript-app/src/components/layout/: sidebar-layout.tsx
next-typescript-app/src/components/ui/: alert-dialog.tsx  button.tsx  data-table.tsx
next-typescript-app/src/lib/: schema.ts  settings.ts  utils.ts
next-typescript-app/src/lib/api/: create-rest-client.ts  rest-client.ts  rest.ts  types.ts
next-typescript-app/src/lib/server/db/: fares.ts  (+6 more)
(+29 files in other folders)
